--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="no_subscription_margins">16dp</dimen>
+
+    <dimen name="subreddit_list_item_horizontal_margin">16dp</dimen>
+    <dimen name="subreddit_list_item_vertical_margin">8dp</dimen>
 </resources>
