--- a/app/src/main/res/layout/subreddit_list_item.xml
+++ b/app/src/main/res/layout/subreddit_list_item.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:orientation="horizontal"
-    tools:parentTag="android.widget.LinearLayout"
-    android:gravity="center_vertical">
+    tools:parentTag="android.widget.RelativeLayout"
+    tools:layout_width="match_parent"
+    tools:layout_height="wrap_content"
+    >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            tools:text="Books" />
-
-        <TextView
-            android:id="@+id/hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14sp"
-            tools:text="99,321 subscribers"
-            android:layout_marginStart="8dp"/>
-
-    </LinearLayout>
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <ImageView
-        android:id="@+id/subscribe_button"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|center_vertical"
-        android:background="@drawable/ic_favorite_border_black_24dp"
-        tools:src="@drawable/ic_favorite_black_24dp"
-        android:foreground="?attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"/>
+        android:layout_marginStart="@dimen/subreddit_list_item_horizontal_margin"
+        android:layout_marginEnd="@dimen/subreddit_list_item_vertical_margin">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:textSize="24sp"
+                tools:text="Books" />
+
+            <TextView
+                android:id="@+id/hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_alignParentStart="true"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="14sp"
+                tools:text="99,321 subscribers"/>
+
+        <ImageView
+            android:id="@+id/subscribe_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:background="@drawable/ic_favorite_border_black_24dp"
+            tools:src="@drawable/ic_favorite_black_24dp"
+            android:foreground="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"/>
+    </RelativeLayout>
+
 </merge>
