Working on making comments look good. Also updated submission view to have recyclerview as it's root element.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,9 @@
         <attr name="titleText" format="string" />
         <attr name="subscribed" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="CommentView">
+        <attr name="depth" format="integer" />
+        <attr name="text" format="string" />
+    </declare-styleable>
 </resources>
