--- a/app/src/main/res/layout/comment.xml
+++ b/app/src/main/res/layout/comment.xml
@@ -11,8 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/line_container"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:id="@+id/comment_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/comment_body"
+        android:layout_toEndOf="@id/line_container"
+        android:layout_alignParentBottom="true"
+        />
 
     <LinearLayout
         android:id="@+id/line_container"
@@ -20,6 +28,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignTop="@id/comment_body"
-        android:layout_alignBottom="@id/comment_body"
+        android:layout_alignBottom="@id/comment_author"
         android:layout_alignParentTop="true"/>
 </merge>
