--- a/app/src/main/res/layout/picture_submission.xml
+++ b/app/src/main/res/layout/picture_submission.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,6 +16,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_open_in_browser_white_24dp"
         />
 
     <ProgressBar
