--- a/app/src/main/res/layout/subreddit_list_item.xml
+++ b/app/src/main/res/layout/subreddit_list_item.xml
@@ -37,8 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:background="@drawable/ic_favorite_border_black_24dp"
-            tools:src="@drawable/ic_favorite_black_24dp"
+            android:background="@drawable/ic_not_favorite"
+            tools:src="@drawable/ic_favorite"
             android:foreground="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"/>
