Initial draft of self post. Moving on to actually displaying different subreddits

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
 
     <color name="grey100">#F5F5F5</color>
     <color name="link_color">#0000EE</color>
-    <color name="grey">#757575</color>
+    <color name="grey">#9E9E9E</color>
     <color name="odd_comment_color">#E0E0E0</color>
 </resources>
