--- a/app/src/main/res/layout/picture_submission.xml
+++ b/app/src/main/res/layout/picture_submission.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="16dp"
         android:layout_gravity="bottom|end"
         android:src="@drawable/ic_open_in_browser_white_24dp"
+        android:visibility="invisible"
         />
 
     <ProgressBar
