--- a/app/src/main/res/layout/submission.xml
+++ b/app/src/main/res/layout/submission.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,18 +12,17 @@
         android:id="@+id/submission_fob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_gravity="bottom|end"
         android:src="@drawable/ic_open_in_browser_white_24dp"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
 
     <ProgressBar
         android:id="@+id/submission_progressbar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:visibility="gone"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </FrameLayout>
