--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="1"
         android:title="@string/action_search"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_manage"
+        android:orderInCategory="2"
+        android:title="@string/action_manage"
+        app:showAsAction="ifRoom" />
 </menu>
