--- a/app/src/main/res/layout/submission_widget.xml
+++ b/app/src/main/res/layout/submission_widget.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -6,6 +7,7 @@
     android:padding="@dimen/widget_margin">
 
     <LinearLayout
+        android:id="@+id/widget_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -26,34 +28,44 @@
 
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/widget_progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-
-    <TextView
-        android:id="@+id/widget_title"
+    <LinearLayout
+        android:id="@+id/widget_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
-        android:contentDescription="@string/appwidget_text"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="@string/appwidget_text"
-        android:textSize="14sp"
-        android:visibility="gone" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/widget_author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textSize="12sp"
-        android:visibility="gone" />
+        <ProgressBar
+            android:id="@+id/widget_progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/widget_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
+            android:contentDescription="@string/appwidget_text"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@string/appwidget_text"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/widget_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
+            android:contentDescription="@string/appwidget_text"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@string/appwidget_text"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </LinearLayout>
