--- a/app/src/main/res/layout/submission.xml
+++ b/app/src/main/res/layout/submission.xml
@@ -13,15 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/submission_fob_margin"
+        android:layout_marginEnd="@dimen/submission_fob_margin"
         android:src="@drawable/ic_open_in_browser_white_24dp"
         android:visibility="invisible" />
 
     <ProgressBar
         android:id="@+id/submission_progressbar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/progress_bar_size"
+        android:layout_height="@dimen/progress_bar_size"
         android:layout_gravity="center"
         android:visibility="gone" />
 
