--- a/app/src/main/res/layout/submission_widget.xml
+++ b/app/src/main/res/layout/submission_widget.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:orientation="horizontal"
-        android:paddingBottom="4dp"
-        android:paddingTop="4dp">
+        android:paddingBottom="@dimen/widget_bar_padding"
+        android:paddingTop="@dimen/widget_bar_padding">
 
         <TextView
             android:id="@+id/widget_subreddit"
@@ -24,7 +24,7 @@
             android:gravity="center"
             android:text="@string/appwidget_text"
             android:textColor="@android:color/white"
-            android:textSize="12sp" />
+            android:textSize="@dimen/widget_subreddit_text_size" />
 
     </LinearLayout>
 
@@ -44,26 +44,26 @@
             android:id="@+id/widget_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="@dimen/widget_title_margin"
+            android:layout_marginStart="@dimen/widget_title_margin"
             android:contentDescription="@string/appwidget_text"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="@string/appwidget_text"
-            android:textSize="14sp"
+            android:textSize="@dimen/widget_title_text_size"
             android:visibility="gone" />
 
         <TextView
             android:id="@+id/widget_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="@dimen/widget_author_margin"
+            android:layout_marginStart="@dimen/widget_author_margin"
             android:contentDescription="@string/appwidget_text"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/appwidget_text"
-            android:textSize="12sp"
+            android:textSize="@dimen/widget_author_text_size"
             android:visibility="gone" />
 
     </LinearLayout>
