--- a/app/src/main/res/layout/subreddit_list_item.xml
+++ b/app/src/main/res/layout/subreddit_list_item.xml
@@ -18,7 +18,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:textSize="24sp"
+                android:textSize="@dimen/subreddit_list_item_title_text_size"
                 tools:text="Books" />
 
             <TextView
@@ -28,7 +28,7 @@
                 android:layout_below="@+id/title"
                 android:layout_alignParentStart="true"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="14sp"
+                android:textSize="@dimen/subreddit_list_item_hint_text_size"
                 tools:text="99,321 subscribers"/>
 
         <ImageView
