--- a/app/src/main/res/layout/vertical_line.xml
+++ b/app/src/main/res/layout/vertical_line.xml
@@ -4,4 +4,4 @@
     android:layout_height="match_parent"
     android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
-    android:background="@android:color/darker_gray"></View>
+    android:background="@android:color/darker_gray"/>
