--- a/app/src/main/res/layout/submission_widget.xml
+++ b/app/src/main/res/layout/submission_widget.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/widget_bar"
